fix of icon display when email is too long

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -306,3 +306,10 @@ button {
 .cleanSearchInput {
     margin-left: -2px;
 }
+
+.recruiter {
+    p {
+        max-width: 80%;
+        word-wrap: anywhere;
+    }
+}
